@@ -1,10 +1,12 @@
+THIS FILE IS OUT OF DATE.  SEE ACEDB.HOWTO.
+
 ***********************************************************
 ***********************************************************
 
 INSTALLATION of the Acedb-server
 
 July 18, 1995 (revised dec 98)
-SCCS: $Id: SERVER_INSTALLATION.HOWTO,v 1.1 1999/07/22 17:12:41 lstein Exp $
+SCCS: $Id: SERVER_INSTALLATION.HOWTO,v 1.2 2001/07/16 20:51:58 lstein Exp $
 
 This documentation was written by
 dbigwood@locus.nalusda.gov
