@@ -2,6 +2,8 @@
 	1. Fixed a bad bug involving inability to index into portions of the subtree anchored by
 		numeric 0.
 	2. Added the -filled argument to autogenerated methods (big win).
+	3. Added -coordinates and -getcoordinates arguments to asGif() to support scrolling 
+	   and zooming images.
 1.71
 	1. Fixed the Ace::Sequence _make_filter() function to respect the value of automerge()
 	2. Made it possible to change the color of introns and exons depending on curation status
